# email_analyzer

./: .env.example  .gitignore  .pylintrc  AGENTS.md  IDEAS.txt  README.md  pyproject.toml
$/opencode/agents/: review.md
.github/workflows/: pylint.yml  ruff.yml  semgrep.yml
batch_output/batch_69cd44ff49c08190862e0101d28cc8c9/: batch_final.json  batch_status_history.jsonl  batch_summary.json  submission.json
benchmarks/: README.md
docs/: HOWTO-AI-Server-Monitoring.md  batch_state_machine.md  batch_submission.md  benchmarks.md  developer_guide.md  prompt-example.txt  structured_output_schema_example.py
src/email_analyzer/: __init__.py  batch_output_xlsx.py  batch_submitter.py  batch_submitter_common.py  cli.py  config.py  dedupe.py  eval_benchmark.py  html.py  language.py  logging_utils.py  mailbox_flatten.py  metrics.py  mime.py  models.py  ollama_batch_submitter.py  prepare.py  quote_strip.py  render_batch.py
tests/: test_batch_output_xlsx.py  test_batch_submitter.py  test_cli.py  test_config.py  test_dedupe.py  test_eval_benchmark.py  test_html.py  test_language.py  test_logging_utils.py  test_mailbox_flatten.py  test_metrics.py  test_mime.py  test_models.py  test_ollama_batch_submitter.py  test_prepare.py  test_quote_strip.py  test_render_batch.py
tests/fixtures/: alternative_duplicate.eml
